[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-chain-chaos"
version = "0.1.0"
description = "Meta OpenEnv Supply Chain Chaos environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi",
  "uvicorn",
  "pydantic",
  "requests",
  "openai>=2.30.0",
  "torch>=2.0.0",
  "transformers>=4.30.0",
]

[project.scripts]
server = "server_runner:main"
